--- a/scss/_attribution.scss
+++ b/scss/_attribution.scss
@@ -1,7 +1,12 @@
 .attribution {
   font-size: 11px;
   text-align: center;
+  @media screen and (min-width: 768px) {
+    display: flex;
+    justify-content: center;
+    margin: 0;
+  }
 }
 .attribution a {
-  color: white;
+  color: var(--magenta);
 }
