--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -2,3 +2,11 @@
   --purple: hsl(257, 40%, 49%);
   --magenta: hsl(300, 69%, 71%);
 }
+
+.fa-brands.icon--white {
+  color: white;
+
+  &:visited {
+    color: white;
+  }
+}
