--- a/scss/_homepage.scss
+++ b/scss/_homepage.scss
@@ -5,7 +5,6 @@ body {
   background-image: url(/images/bg-mobile.svg);
   background-size: auto;
   background-repeat: no-repeat;
-  font-family: var(--font-body);
 
   @media screen and (min-width: 376px) {
     background-image: url(/images/bg-desktop.svg);
@@ -87,12 +86,13 @@ body {
 
 .button,
 .button:visited {
-  display: inline-block;
+  display: block;
+  text-align: center;
   background-color: white;
   color: var(--purple);
   font-family: var(--font-title);
   font-size: 1.4rem;
-  padding: 1.3rem 10rem;
+  padding: 1.3rem 0rem;
   border-radius: 4rem;
   box-shadow: 0px 5px 10px hsla(0, 0%, 0%, 0.4);
 
@@ -102,8 +102,16 @@ body {
     transition: all 0.3s;
   }
 
-  @media screen and (min-width: 1024px) {
+  @media screen and (min-width: 375px) {
+    display: inline-block;
+    padding: 1.3rem 10rem;
+  }
+
+  @media screen and (min-width: 768px) {
     padding: 1rem 5rem;
+  }
+
+  @media screen and (min-width: 1024px) {
     font-size: 1.6rem;
   }
 }
@@ -119,10 +127,6 @@ body {
   border: 1px solid white;
   border-radius: 50%;
 
-  &--white {
-    color: white;
-  }
-
   &:visited {
     text-decoration: none;
   }
@@ -137,10 +141,21 @@ body {
   margin: 4rem auto 1rem;
   display: flex;
   justify-content: center;
+  align-items: flex-end;
   gap: 1.5rem;
 
   @media screen and (min-width: 768px) {
-    margin: 3rem auto 0;
+    margin: 3rem 4rem 0;
     justify-content: flex-end;
   }
+  @media screen and (min-width: 1024px) {
+    margin: 3rem 0 0;
+    justify-content: flex-end;
+  }
+}
+
+.footer {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
 }
